# Gemma4-langgraph-Local

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: Gemma4-Agents.py  Gemma4-Agents_02.py  Gemma4-Agents_03.py  Gemma4-Agents_04.ipynb  Gemma4-Agents_04.py  Gemma4-Agents_05.py  Gemma4-Agents_06.py
