[project]
name = "gemma4-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.5",
    "ddgs>=9.13.0",
    "fastembed>=0.8.0",
    "langchain>=1.2.15",
    "langchain-core>=1.4.0",
    "langchain-google-vertexai>=3.2.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.6",
    "langsmith>=0.7.32",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "polars>=1.39.3",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "ragas==0.2.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "tavily-python>=0.5.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
notebook = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "marimo>=0.22.4",
    "nbformat>=5.10.4",
]
